# Preimero_acesso

./: Depara_rastreador.xlsx  README.md  base_contratos_distribuir.xlsx  depara_sem_rastreador.xlsx  distribuicao_contratos.py  pyproject.toml  requirements.txt
scripts/: exemplo.py  pipeline_passo_a_passo.py
src/distribuicao_contratos/: __init__.py
tests/: test_distribuicao.py
